--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <!--Page Title-->
-    <title>Namari - Free Landing Page Template</title>
+    <title>Sunil Kurthakoti</title>
 
     <!--Meta Keywords and Description-->
     <meta name="keywords" content="">
@@ -144,13 +144,12 @@
             <div class="col-38">
 
                 <div class="section-heading">
-                    <h1>A FREE AND SIMPLE LANDING PAGE</h1>
-                    <h2>Namari is a free landing page template you can use for your projects. It is free to use for your
-                        personal and commercial projects, enjoy!</h2>
+                    <h1>Sunil Kurthakoti</h1>
+                    <h2>Welcome to a Demo page!</h2>
                 </div>
 
                 <!--Call to Action-->
-                <a href="#" class="button">START CREATING TODAY</a>
+                <a href="#" class="button">Lets Connect!</a>
                 <!--End Call to Action-->
 
             </div>
